Fix alignment.

--- a/source/css/debug.css.scss
+++ b/source/css/debug.css.scss
@@ -186,12 +186,11 @@ padding-right: 2%;
 	}
 }
 .social {
-font-size: 80%;
-font-family: "concourse-t3";
-border-top: solid 1px lightgray;
-border-bottom: solid 1px lightgray;
-margin: 10px 0px 30px 0px;
-padding: 10px 0px 10px 0px;
+  font-size: 80%;
+  border-top: solid 1px lightgray;
+  border-bottom: solid 1px lightgray;
+  margin: 10px 0px 30px 0px;
+  padding: 10px 0px 10px 0px;
 }
 .tag {
   background-color: lightred;
